--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "bourbakiii",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "express": "^4.17.3",
     "mongoose": "^6.2.3"
   },
