--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "express": "^4.17.3",
-    "mongoose": "^6.2.3"
+    "mongoose": "^6.2.3",
+    "mongoose-bcrypt": "^1.9.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
