--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "cors": "^2.8.5",
     "express": "^4.17.3",
     "mongoose": "^6.2.3",
-    "mongoose-bcrypt": "^1.9.0"
+    "mongoose-bcrypt": "^1.9.0",
+    "mongoose-hidden": "^1.9.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
