--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "express": "^4.17.3",
     "mongoose": "^6.2.3",
     "mongoose-bcrypt": "^1.9.0",
-    "mongoose-hidden": "^1.9.1"
+    "mongoose-hidden": "^1.9.1",
+    "nodemailer": "^6.7.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
