--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "mongoose-bcrypt": "^1.9.0",
     "mongoose-hidden": "^1.9.1",
     "mongoose-ttl": "0.0.3",
-    "nodemailer": "^6.7.2"
+    "nodemailer": "^6.7.2",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
