--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,23 +1,23 @@
 {
     "nuxt.isNuxtApp": false,
     "workbench.colorCustomizations": {
-        "activityBar.activeBackground": "#262626",
-        "activityBar.activeBorder": "#606020",
-        "activityBar.background": "#262626",
+        "activityBar.activeBackground": "#523214",
+        "activityBar.activeBorder": "#1f804e",
+        "activityBar.background": "#523214",
         "activityBar.foreground": "#e7e7e7",
         "activityBar.inactiveForeground": "#e7e7e799",
-        "activityBarBadge.background": "#606020",
+        "activityBarBadge.background": "#1f804e",
         "activityBarBadge.foreground": "#e7e7e7",
-        "sash.hoverBorder": "#262626",
-        "statusBar.background": "#0d0d0d",
+        "sash.hoverBorder": "#523214",
+        "statusBar.background": "#29190a",
         "statusBar.foreground": "#e7e7e7",
-        "statusBarItem.hoverBackground": "#262626",
-        "statusBarItem.remoteBackground": "#0d0d0d",
+        "statusBarItem.hoverBackground": "#523214",
+        "statusBarItem.remoteBackground": "#29190a",
         "statusBarItem.remoteForeground": "#e7e7e7",
-        "titleBar.activeBackground": "#0d0d0d",
+        "titleBar.activeBackground": "#29190a",
         "titleBar.activeForeground": "#e7e7e7",
-        "titleBar.inactiveBackground": "#0d0d0d99",
+        "titleBar.inactiveBackground": "#29190a99",
         "titleBar.inactiveForeground": "#e7e7e799"
     },
-    "peacock.color": "#0d0d0d"
+    "peacock.color": "#29190a"
 }
