--- a/package.json
+++ b/package.json
@@ -11,19 +11,13 @@
   "author": "bourbakiii",
   "license": "ISC",
   "dependencies": {
-    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
     "express": "^4.17.3",
-    "express-fileupload": "^1.3.1",
+    "express-validator": "^6.14.2",
     "i": "^0.3.7",
-    "mongoose": "^6.2.3",
-    "mongoose-bcrypt": "^1.9.0",
-    "mongoose-hidden": "^1.9.1",
     "mysql": "^2.18.1",
-    "nodemailer": "^6.7.2",
-    "npm": "^8.13.2",
-    "uuid": "^8.3.2"
+    "npm": "^8.13.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
