--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "author": "bourbakiii",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
     "express": "^4.17.3",
     "express-validator": "^6.14.2",
     "i": "^0.3.7",
     "mysql": "^2.18.1",
+    "nodemailer": "^6.7.6",
     "npm": "^8.13.2"
   },
   "devDependencies": {
