--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "i": "^0.3.7",
     "mysql": "^2.18.1",
     "nodemailer": "^6.7.6",
-    "npm": "^8.13.2"
+    "npm": "^8.13.2",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.19"
