--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.3",
     "express-fileupload": "^1.4.0",
+    "express-form-data": "^2.0.18",
     "express-validator": "^6.14.2",
     "i": "^0.3.7",
     "mysql": "^2.18.1",
