--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express-form-data": "^2.0.18",
     "express-validator": "^6.14.2",
     "i": "^0.3.7",
+    "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "nodemailer": "^6.7.6",
     "npm": "^8.13.2",
